hello-springboot/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hello-springboot
  namespace: hello-springboot
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-springboot
