hello-springboot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-springboot
  namespace: hello-springboot
  annotations:
 ##   kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#  - hosts:
#    - hello-springboot.gtxcodeninja.com
#    secretName: hello-springboot-tls
  rules:
  - host: hello-springboot.gtxcodeninja.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-springboot
          servicePort: 80
